--- a/.github/workflows/code-quality.yml
+++ b/.github/workflows/code-quality.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.24'
         cache: true
         
     - name: Run go vet
@@ -37,7 +37,8 @@ jobs:
         
     - name: Check for common issues
       run: |
-        go install honnef.co/go/tools/cmd/staticcheck@latest
+        # Try latest version first, fallback to specific version if needed
+        go install honnef.co/go/tools/cmd/staticcheck@latest || go install honnef.co/go/tools/cmd/staticcheck@v0.6.0
         staticcheck ./...
         
     - name: Run golangci-lint
