chore: fix golangci.yml

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -125,7 +125,7 @@ issues:
     - path: gen/domain/
       linters:
         - gomnd # Allow magic numbers in domain-specific generators
-    - text: "Error return value of .((os\.)?std(out|err)\..*|.*Close|.*Flush|os\.Remove(All)?|.*printf?|os\.(Un)?Setenv). is not checked"
+    - text: 'Error return value of .((os\.)?std(out|err)\..*|.*Close|.*Flush|os\.Remove(All)?|.*printf?|os\.(Un)?Setenv). is not checked'
       linters:
         - errcheck
     - linters:
